[project]
name = "pyxdftools"
version = "0.1.0"
authors = [
    {name="Jamie Forth", email="j.forth@gold.ac.uk"},
]
description = "Tools for XDF data file processing."
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "BSD-3-Clause"}

dependencies = [
    "pyxdf>=1.17.0",
    "pandas[performance]>=2.2.3",
    "scipy>=1.15.1",
]

[project.urls]
"Homepage" = "https://github.com/jamieforth/pyxdf-tools"
"Bug Tracker" = "https://github.com/jamieforth/pyxdf-tools/issues"

[project.optional-dependencies]
mne = [
    "mne>=1.9.0",
]

[dependency-groups]
dev = [
    "python-lsp-server[all]>=1.12.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true
